200805 캐러설 작업 전 이전작업물 커밋

--- a/송창석/index.html
+++ b/송창석/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="resources/css/reset.css">
+  <link rel="stylesheet" href="resources/css/style.css">
+  <title>carousel slide</title>
+</head>
+<body>
+    <div id="wrap">
+        <div id="ct">
+            <section id="carousel" class="container">
+                <ul class="wrapper">
+                    <li class="item"><span class="img"><img src="resources/images/img01.jpg" alt=""></span></li>
+                    <li class="item"><span class="img"><img src="resources/images/img02.jpg" alt=""></span></li>
+                    <li class="item"><span class="img"><img src="resources/images/img03.jpg" alt=""></span></li>
+                </ul>
+                <div class="arrows-button">
+                    <button class="arrow prev"><i class="hide">prev</i></button>
+                    <button class="arrow next"><i class="hide">next</i></button>
+                </div>
+            </section>
+        </div>
+    </div>
+</body>
+<script src="resources/js/app.js"></script>
 </html>
