--- a/박수정/index.html
+++ b/박수정/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>캐러셀 슬라이더 만들기</title>
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/carousel.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <script src="scripts/carousel.js"></script>
+  <script src="scripts/init.js"></script>
+</head>
+<body>
+  <div class="user-slider">
+    <div class="slider__item">
+      <img src="http://placehold.it/700x300/EB87FE/FFFFFF?text=1">
+    </div>
+    <div class="slider__item">
+      <img src="http://placehold.it/500x300/E67ACE/FFFFFF?text=2">
+    </div>
+    <div class="slider__item">
+      <img src="http://placehold.it/600x300/FC92B0/FFFFFF?text=3">
+    </div>
+    <div class="slider__item">
+      <img src="http://placehold.it/700x300/E6807A/FFFFFF?text=4">
+    </div>
+    <div class="slider__item">
+      <img src="http://placehold.it/700x300/FE9F87/FFFFFF?text=5">
+    </div>
+  </div>
+  
+</body>
 </html>
