--- a/송창석/index.html
+++ b/송창석/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <div id="wrap">
-        <div id="ct">
+        <div id="ct" class="flex">
+            <div class="example">
+                <a href="https://im-developer.tistory.com/97" target="_blank">참고링크</a>
+            </div>
             <section id="carousel" class="container">
                 <ul class="wrapper">
-                    <li class="item"><span class="img"><img src="resources/images/img01.jpg" alt=""></span></li>
-                    <li class="item"><span class="img"><img src="resources/images/img02.jpg" alt=""></span></li>
-                    <li class="item"><span class="img"><img src="resources/images/img03.jpg" alt=""></span></li>
+                    <li class="item item1"><i class="num">1</i><span class="img"><img src="resources/images/img01.jpg" alt=""></span></li>
+                    <li class="item item2"><i class="num">2</i><span class="img"><img src="resources/images/img02.jpg" alt=""></span></li>
+                    <li class="item item3"><i class="num">3</i><span class="img"><img src="resources/images/img03.jpg" alt=""></span></li>
+                    <li class="item item4"><i class="num">4</i><span class="img"><img src="resources/images/img04.jpg" alt=""></span></li>
                 </ul>
                 <div class="arrows-button">
                     <button class="arrow prev"><i class="hide">prev</i></button>
