--- a/강민정/index.html
+++ b/강민정/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>carousel script</title>
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>carousel script</title>
+  <link rel="stylesheet" href="./style.css">
+  <script src="./carousel.js"></script>
+</head>
+<body>
+<div class="makeCarousel">
+  <ul>
+    <li>first</li>
+    <li>second</li>
+    <li>third</li>
+    <li>fourth</li>
+    <li>fifth</li>
+  </ul>
+</div>
+</body>
 </html>
