--- a/강민정/index.html
+++ b/강민정/index.html
@@ -17,5 +17,18 @@
     <li>fifth</li>
   </ul>
 </div>
+
+<div class="singleCarousel">
+  <ul>
+    <li>first</li>
+    <li>second</li>
+    <li>third</li>
+    <li>fourth</li>
+    <li>fifth</li>
+    <li>sixth</li>
+    <li>seventh</li>
+    <li>eighth</li>
+  </ul>
+</div>
 </body>
 </html>
