캐러셀 슬라이드 구현

--- a/윤선지/index.html
+++ b/윤선지/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>캐러셀 슬라이더 구현</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrap">
+      <div class="container">
+        <div class="content">
+          <!-- slide -->
+          <div class="slider_wrap">
+            <div class="slide_frame">
+              <div class="slide_bx">
+                <img src="img/img1.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!-- //slide -->
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
