--- a/윤선지/index.html
+++ b/윤선지/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>캐러셀 슬라이더 구현</title>
+    <link rel="stylesheet" href="css/slide.css">
   </head>
   <body>
     <div class="wrap">
@@ -12,14 +13,25 @@
           <!-- slide -->
           <div class="slider_wrap">
             <div class="slide_frame">
-              <div class="slide_bx">
-                <img src="img/img1.jpg" alt="">
+              <div class="slide_list">
+                <div class="slide_bx">
+                  <img src="img/img1.jpg" alt="">
+                </div>
+                <div class="slide_bx">
+                  <img src="img/img2.jpg" alt="">
+                </div>
+                <div class="slide_bx">
+                  <img src="img/img3.jpg" alt="">
+                </div>
               </div>
             </div>
+            <div class="slide_paging"></div>
+            <div class="slide_control"></div>
           </div>
           <!-- //slide -->
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="script/slide.js"></script>
   </body>
 </html>
