이전, 다음버튼 이벤트 분기처리, autoplay 추가

--- a/윤선지/index.html
+++ b/윤선지/index.html
@@ -27,6 +27,8 @@
             </div>
             <div class="slide_paging"></div>
             <div class="slide_control"></div>
+            <div class="play_control"><button type="button" class="btn_play_control">정지</button></div>
+            
           </div>
           <!-- //slide -->
         </div>
