캐러셀 새로작업

--- a/송창석/index.html
+++ b/송창석/index.html
@@ -17,23 +17,21 @@
             <section id="carousel" class="container">
                 <div class="wrapper">
                     <ul class="list">
-                        <li class="item item1"><i class="num">1</i><span class="img"><img src="resources/images/img01.jpg" alt=""></span></li>
-                        <li class="item item2"><i class="num">2</i><span class="img"><img src="resources/images/img02.jpg" alt=""></span></li>
-                        <li class="item item3"><i class="num">3</i><span class="img"><img src="resources/images/img03.jpg" alt=""></span></li>
-                        <li class="item item4"><i class="num">4</i><span class="img"><img src="resources/images/img04.jpg" alt=""></span></li>
+                        <li class="slide slide1"><i class="num">1</i><span class="img"><img src="resources/images/img01.jpg" alt=""></span></li>
+                        <li class="slide slide2"><i class="num">2</i><span class="img"><img src="resources/images/img02.jpg" alt=""></span></li>
+                        <li class="slide slide3"><i class="num">3</i><span class="img"><img src="resources/images/img03.jpg" alt=""></span></li>
+                        <li class="slide slide4"><i class="num">4</i><span class="img"><img src="resources/images/img04.jpg" alt=""></span></li>
                     </ul>
                 </div>
                 <div class="arrows-button">
-                    <i class="fas fa-chevron-circle-left arrow prev"></i>
-                    <i class="fas fa-chevron-circle-right arrow next"></i>
+                    <button type="button" class="fas fa-chevron-circle-left prev"></button>
+                    <button type="button" class="fas fa-chevron-circle-right next"></button>
                 </div>
-                <div class="play-button">
-                    <i class="fas fa-play-circle play"></i>
-                    <i class="fas fa-pause-circle pause"></i>
-                </div>
+                <button type="button" class="play-button fas fa-pause-circle"></button>
+                <!-- <button type="button" class="fas fa-play-circle play"></button> -->
             </section>
         </div>
     </div>
 </body>
-<script src="resources/js/app.js"></script>
+<script src="resources/js/re_app.js"></script>
 </html>
